--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "validate:links": "node scripts/link-validator.js",
+    "validate:content": "node scripts/content-validator.js",
+    "validate:all": "npm run validate:links && npm run validate:content",
+    "prebuild": "npm run validate:all"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.35.2",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "glob": "^10.3.10"
   }
 }
